[project]
name = "helmholtzexact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.6",
    "scipy>=1.7.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "jupytext>=1.15.2",
    "matplotlib>=3.5.3",
    "pytest>=7.4.4",
    "ruff>=0.11.13",
]
